2006-09-11  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginmanager-locale-domain.h: corrected comment.

	* app/widgets/gimpimagepropview.[ch]: added file related info to
	the Image Properties dialog as requested in bug #86276.

2006-09-11  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: pass the user context to
	gimp_container_combo_box_new().

2006-09-11  Sven Neumann  <sven@gimp.org>

	* app/core/core-enums.[ch]: use "Solid color" as description for
	GIMP_STROKE_STYLE_SOLID.

	* app/widgets/gimpstrokeeditor.c: moved "style" control further up
	to make it less ambiguous (bug #309740).

	* app/dialogs/stroke-dialog.c (stroke_dialog_new): pass the context
	to gimp_container_combo_box_new().

2006-09-11  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw_area):
	fixed calculation of offset into the source buffer (bug #353639).

2006-09-11  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-selection.c: minor cleanup.

2006-09-11  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_ruler_button_press): don't just
	unconditionally use the active tool for sample point moving if it
	is a GimpColorTool, use it only if it is a GimpColorTool but *not*
	a GimpPaintTool with color picking disabled. Fixed bug #355237.

2006-09-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/depthmerge.c (dialogDepthMap2ChangedCallback):
	change "depthMap1Drawable" to "depthMap2Drawable" to fix
	typo introduced in version 1.35 committed on 2004-04-21.
	Should fix bug #355219.

2006-09-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c: added a thumbnail to the "Rotate
	Image?" query dialog as suggested in bug #355213.

2006-09-10  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/file-save-dialog.c (file_save_dialog_check_uri):
	after appending an extension, invoke "response" on the dialog and